--- a/signup.html
+++ b/signup.html
@@ -373,9 +373,10 @@
                     <input type="text" class="form-control" id="signupName" required>
                 </div>
                 <div class="mb-3">
-                    <label for="signupEmail" class="form-label">Email Address</label>
+                    <label for="signupEmail" class="form-label">Email address</label>
                     <input type="email" class="form-control" id="signupEmail" required>
-                </div>
+                    <div class="invalid-feedback">Please enter a valid email address (e.g., user@example.com)</div>
+                    </div>
                 <div class="mb-3 password-container">
                     <label for="signupPassword" class="form-label">Password</label>
                     <input type="password" class="form-control" id="signupPassword" required>
